@@ -1,0 +1,6 @@
+module MovableTypeStructs
+  class Category < ActionWebService::Struct
+    member :categoryId,    :string
+    member :categoryName,  :string
+  end
+end
